--- a/index.html
+++ b/index.html
@@ -6,32 +6,211 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!-- Bootstrap icons -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+	<link rel="stylesheet" href="assets/css/style.css">
+
 	<title>Sejarahku</title>
 </head>
 
 <body>
 
-	<center>
-		<h1>SEJARAHKU</h1>
-		<p>Sebuah website untuk mempelajari sejarah</p>
-	</center>
+	<!-- ========== NAVBAR ========== -->
+	<nav>
+		<div class="nav-brand">
+			<a href="#utama">SEJARAHKU</a>
+		</div>
+		<ul class="nav-items">
+			<li><a href="#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
+			<li><a href="#tentang"><i class="bi bi-chat-right-quote"></i> Tentang</a></li>
+			<li><a href="#pengembang"><i class="bi bi-people"></i> Pengembang</a></li>
+		</ul>
+		<div class="nav-end">
+			<a href="https://github.com/PowerRangers-XIRPL1/Sejaraku"><i class="bi bi-github"></i></a>
+		</div>
+	</nav>
+	<!-- ========== NAVBAR ========== -->
 
-	<hr>
 
-	<ul>
-		<li><a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html">Proklamasi Kemerdekaan dan Pembentukan Pemerintahan Awal</a></li>
-		<li><a href="materi/upaya-mempertahankan-kemerdekaan-republik-indonesia/index.html">Upaya Mempertahankan Kemerdekaan Republik Indonesia</a></li>
-		<li><a href="materi/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan-indonesia/index.html">Ancaman Disintegrasi Bangsa Pada Masa Awal Kemerdekaan</a></li>
-		<li><a href="materi/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal/index.html">Kondisi RI Pada Masa Awal Kemerdekaan Hingga Masa Demokrasi Liberal</a></li>
-		<li><a href="materi/indonesia-pada-masa-demokrasi-terpimpin/index.html">Indonesia Pada Masa Demokrasi Terpimpin</a></li>
-		<li><a href="materi/indonesia-pada-masa-orde-baru/index.html">Indonesia Pada Masa Orde Baru</a></li>
-		<li><a href="materi/masa-reformasi-di-indonesia/index.html">Masa Reformasi di Indonesia</a></li>
-		<li><a href="materi/peran-indonesia-bagi-perdamaian-dunia/">Peran Indonesia Bagi Perdamaian Dunia</a></li>
-	</ul>
+	
+	<!-- ========== HERO BANNER ========== -->
+	<header id="utama">
+		<div class="container">
+			<div class="title">
+				SEJARAHKU
+			</div>
+			<div class="description">
+				Sebuah website untuk mempelajari sejarah
+			</div>
+		</div>
+	</header>
+	<!-- ========== HERO BANNER ========== -->
 
-	<hr>
 
-	<p>©2021 Power Rangers, Made with love in Bali, Indonesia</p>
+	
+	<!-- ========== MATERI ========== -->
+	<section id="materi">
+		<div class="container">
+			<div class="container-header">
+				<i class="bi bi-journal-text"></i> Materi
+			</div>
+			<div class="container-main">
+				<ul>
+					<li><a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html">Proklamasi Kemerdekaan dan Pembentukan Pemerintahan Awal</a></li>
+					<li><a href="materi/upaya-mempertahankan-kemerdekaan-republik-indonesia/index.html">Upaya Mempertahankan Kemerdekaan Republik Indonesia</a></li>
+					<li><a href="materi/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan-indonesia/index.html">Ancaman Disintegrasi Bangsa Pada Masa Awal Kemerdekaan</a></li>
+					<li><a href="materi/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal/index.html">Kondisi RI Pada Masa Awal Kemerdekaan Hingga Masa Demokrasi Liberal</a></li>
+					<li><a href="materi/indonesia-pada-masa-demokrasi-terpimpin/index.html">Indonesia Pada Masa Demokrasi Terpimpin</a></li>
+					<li><a href="materi/indonesia-pada-masa-orde-baru/index.html">Indonesia Pada Masa Orde Baru</a></li>
+					<li><a href="materi/masa-reformasi-di-indonesia/index.html">Masa Reformasi di Indonesia</a></li>
+					<li><a href="materi/peran-indonesia-bagi-perdamaian-dunia/">Peran Indonesia Bagi Perdamaian Dunia</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<!-- ========== MATERI ========== -->
+
+
+	
+	<!-- ========== TENTANG ========== -->
+	<section id="tentang">
+		<div class="container">
+			<div class="container-header">
+				<i class="bi bi-chat-right-quote"></i> Tentang
+			</div>
+			<div class="container-main">
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea eveniet laboriosam, eaque quos consectetur rerum commodi vel quasi inventore rem dolores maiores at. Optio eligendi excepturi consequuntur odio eaque maiores nulla placeat nihil alias. Rem facere possimus natus cumque sunt itaque, tempore, debitis ex quisquam voluptates incidunt commodi laudantium voluptatum ratione esse architecto officia quo officiis molestiae reprehenderit eum! Accusantium id aperiam ex fuga quae nulla, facere quis nemo autem pariatur! Tempora nulla voluptatum molestias pariatur obcaecati? Totam, eum nobis. Similique autem quos eos, nostrum esse nobis, in accusantium nemo recusandae a hic. Eius soluta, dignissimos dicta consequuntur velit quos.
+				</p>
+			</div>
+		</div>
+	</section>
+	<!-- ========== TENTANG ========== -->
+
+
+	
+	<!-- ========== PENGEMBANG ========== -->
+	<section id="pengembang">
+		<div class="container">
+			<div class="container-header">
+				<i class="bi bi-people"></i> Pengembang
+			</div>
+			<div class="container-main">
+				<!-- Candra -->
+				<div class="card">
+					<img class="card-img" src="assets/img/candra.jpg" alt="Candra Manika Dewi" width="100px">
+					<div class="card-body">
+						<div class="card-title">
+							Candra Manika Dewi
+						</div>
+						<p class="card-text">
+							A student at SMK N 1 Denpasar
+						</p>
+						<div class="card-footer">
+							<ul class="list">
+								<li><a href=""><i class="bi bi-github"></i></a></li>
+								<li><a href=""><i class="bi bi-instagram"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Candra -->
+
+				<!-- Pera -->
+				<div class="card">
+					<img class="card-img" src="assets/img/pera.jpg" alt="Pera Pradnyani" width="100px">
+					<div class="card-body">
+						<div class="card-title">
+							Pera Pradnyani
+						</div>
+						<p class="card-text">
+							A student at SMK N 1 Denpasar
+						</p>
+						<div class="card-footer">
+							<ul class="list">
+								<li><a href=""><i class="bi bi-github"></i></a></li>
+								<li><a href=""><i class="bi bi-instagram"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Pera -->
+
+				<!-- Cecep -->
+				<div class="card">
+					<img class="card-img" src="assets/img/cecep.jpg" alt="Adi Aryasuta" width="100px">
+					<div class="card-body">
+						<div class="card-title">
+							Adi Aryasuta
+						</div>
+						<p class="card-text">
+							A student at SMK N 1 Denpasar
+						</p>
+						<div class="card-footer">
+							<ul class="list">
+								<li><a href=""><i class="bi bi-github"></i></a></li>
+								<li><a href=""><i class="bi bi-instagram"></i></a></li>
+								<li><a href=""><i class="bi bi-twitter"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Cecep -->
+
+				<!-- Iqbal -->
+				<div class="card">
+					<img class="card-img" src="assets/img/pera.jpg" alt="Iqbal Faturrohim" width="100px">
+					<div class="card-body">
+						<div class="card-title">
+							Iqbal Faturrohim
+						</div>
+						<p class="card-text">
+							A student at SMK N 1 Denpasar
+						</p>
+						<div class="card-footer">
+							<ul class="list">
+								<li><a href=""><i class="bi bi-github"></i></a></li>
+								<li><a href=""><i class="bi bi-instagram"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Iqbal -->
+
+				<!-- Sulton -->
+				<div class="card">
+					<img class="card-img" src="assets/img/candra.jpg" alt="Sulton Akbar" width="100px">
+					<div class="card-body">
+						<div class="card-title">
+							Sulton Akbar
+						</div>
+						<p class="card-text">
+							A student at SMK N 1 Denpasar
+						</p>
+						<div class="card-footer">
+							<ul class="list">
+								<li><a href=""><i class="bi bi-github"></i></a></li>
+								<li><a href=""><i class="bi bi-instagram"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Sulton -->
+			</div>
+		</div>
+	</section>
+	<!-- ========== PENGEMBANG ========== -->
+
+
+	
+	<!-- ========== FOOTER ========== -->
+	<footer>
+		<div class="container">
+			©2021 Power Rangers | Made with <i class="bi bi-heart-fill" style="color: red;"></i> in Bali, Indonesia
+		</div>
+	</footer>
+	<!-- ========== FOOTER ========== -->
 
 </body>
 
