Add card to serve materi

--- a/index.html
+++ b/index.html
@@ -56,16 +56,111 @@
 				<i class="bi bi-journal-text"></i> Materi
 			</div>
 			<div class="container-main">
-				<ul>
-					<li><a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html">Proklamasi Kemerdekaan dan Pembentukan Pemerintahan Awal</a></li>
-					<li><a href="materi/upaya-mempertahankan-kemerdekaan-republik-indonesia/index.html">Upaya Mempertahankan Kemerdekaan Republik Indonesia</a></li>
-					<li><a href="materi/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan-indonesia/index.html">Ancaman Disintegrasi Bangsa Pada Masa Awal Kemerdekaan</a></li>
-					<li><a href="materi/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal/index.html">Kondisi RI Pada Masa Awal Kemerdekaan Hingga Masa Demokrasi Liberal</a></li>
-					<li><a href="materi/indonesia-pada-masa-demokrasi-terpimpin/index.html">Indonesia Pada Masa Demokrasi Terpimpin</a></li>
-					<li><a href="materi/indonesia-pada-masa-orde-baru/index.html">Indonesia Pada Masa Orde Baru</a></li>
-					<li><a href="materi/masa-reformasi-di-indonesia/index.html">Masa Reformasi di Indonesia</a></li>
-					<li><a href="materi/peran-indonesia-bagi-perdamaian-dunia/">Peran Indonesia Bagi Perdamaian Dunia</a></li>
-				</ul>
+
+				<a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Proklamasi Kemerdekaan & Pembentukan Pemerintahan Awal</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Adi Aryasuta</strong></small>
+						</div>
+					</div>
+				</a>
+
+				<a href="materi/upaya-mempertahankan-kemerdekaan-republik-indonesia/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Upaya Mempertahankan Kemerdekaan Republik Indonesia</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Iqbal Faturrohim</strong></small>
+						</div>
+					</div>
+				</a>
+					
+				<a href="materi/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan-indonesia/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Ancamana Disintegrasi Bangsa pada Masa Awal Kemerdekaan</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Iqbal Faturrohim</strong></small>
+						</div>
+					</div>
+				</a>
+
+				<a href="materi/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Kondisi RI pada Masa Awal Kemerdekaan hingga Masa Demokrasi Liberal</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Pera Pradnyani</strong></small>
+						</div>
+					</div>
+				</a>
+
+				<a href="materi/indonesia-pada-masa-demokrasi-terpimpin/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Indonesia Pada Masa Demokrasi Terpimpin</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Candra Manika</strong></small>
+						</div>
+					</div>
+				</a>
+
+				<a href="materi/indonesia-pada-masa-orde-baru/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Indonesia Pada Masa Orde Baru</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Sulton Akbar</strong></small>
+						</div>
+					</div>
+				</a>
+
+				<a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Masa Reformasi di Indonesia</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Adi Aryasuta</strong></small>
+						</div>
+					</div>
+				</a>
+
+				<a href="materi/peran-indonesia-bagi-perdamaian-dunia/index.html">
+					<div class="card">
+						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<div class="card-body">
+							<h4 class="card-title">Peran Indonesia Bagi Perdamaian Dunia</h4>
+							<p class="card-desc">Description</p>
+						</div>
+						<div class="card-footer">
+							<small>Presented by <strong>Sulton Akbar</strong></small>
+						</div>
+					</div>
+				</a>
+
 			</div>
 		</div>
 	</section>
@@ -87,120 +182,6 @@
 		</div>
 	</section>
 	<!-- ========== TENTANG ========== -->
-
-
-	
-	<!-- ========== PENGEMBANG ========== -->
-	<section id="pengembang">
-		<div class="container">
-			<div class="container-header">
-				<i class="bi bi-people"></i> Pengembang
-			</div>
-			<div class="container-main">
-				<!-- Candra -->
-				<div class="card">
-					<img class="card-img" src="assets/img/candra.jpg" alt="Candra Manika Dewi" width="100px">
-					<div class="card-body">
-						<div class="card-title">
-							Candra Manika Dewi
-						</div>
-						<p class="card-text">
-							A student at SMK N 1 Denpasar
-						</p>
-						<div class="card-footer">
-							<ul class="list">
-								<li><a href=""><i class="bi bi-github"></i></a></li>
-								<li><a href=""><i class="bi bi-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- Candra -->
-
-				<!-- Pera -->
-				<div class="card">
-					<img class="card-img" src="assets/img/pera.jpg" alt="Pera Pradnyani" width="100px">
-					<div class="card-body">
-						<div class="card-title">
-							Pera Pradnyani
-						</div>
-						<p class="card-text">
-							A student at SMK N 1 Denpasar
-						</p>
-						<div class="card-footer">
-							<ul class="list">
-								<li><a href=""><i class="bi bi-github"></i></a></li>
-								<li><a href=""><i class="bi bi-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- Pera -->
-
-				<!-- Cecep -->
-				<div class="card">
-					<img class="card-img" src="assets/img/cecep.jpg" alt="Adi Aryasuta" width="100px">
-					<div class="card-body">
-						<div class="card-title">
-							Adi Aryasuta
-						</div>
-						<p class="card-text">
-							A student at SMK N 1 Denpasar
-						</p>
-						<div class="card-footer">
-							<ul class="list">
-								<li><a href=""><i class="bi bi-github"></i></a></li>
-								<li><a href=""><i class="bi bi-instagram"></i></a></li>
-								<li><a href=""><i class="bi bi-twitter"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- Cecep -->
-
-				<!-- Iqbal -->
-				<div class="card">
-					<img class="card-img" src="assets/img/pera.jpg" alt="Iqbal Faturrohim" width="100px">
-					<div class="card-body">
-						<div class="card-title">
-							Iqbal Faturrohim
-						</div>
-						<p class="card-text">
-							A student at SMK N 1 Denpasar
-						</p>
-						<div class="card-footer">
-							<ul class="list">
-								<li><a href=""><i class="bi bi-github"></i></a></li>
-								<li><a href=""><i class="bi bi-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- Iqbal -->
-
-				<!-- Sulton -->
-				<div class="card">
-					<img class="card-img" src="assets/img/candra.jpg" alt="Sulton Akbar" width="100px">
-					<div class="card-body">
-						<div class="card-title">
-							Sulton Akbar
-						</div>
-						<p class="card-text">
-							A student at SMK N 1 Denpasar
-						</p>
-						<div class="card-footer">
-							<ul class="list">
-								<li><a href=""><i class="bi bi-github"></i></a></li>
-								<li><a href=""><i class="bi bi-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- Sulton -->
-			</div>
-		</div>
-	</section>
-	<!-- ========== PENGEMBANG ========== -->
 
 
 	
