Remove 'Tentang', add 'Quote' and some changes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 		</div>
 		<ul class="nav-items">
 			<li><a href="#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
-			<li><a href="#tentang"><i class="bi bi-chat-right-quote"></i> Tentang</a></li>
-			<li><a href="#pengembang"><i class="bi bi-people"></i> Pengembang</a></li>
+			<li><a href="#pengembang"><i class="bi bi-people"></i> Developers</a></li>
 		</ul>
 		<div class="nav-end">
 			<a href="https://github.com/PowerRangers-XIRPL1/Sejaraku"><i class="bi bi-github"></i></a>
@@ -33,7 +32,7 @@
 	<!-- ========== NAVBAR ========== -->
 
 
-	
+
 	<!-- ========== HERO BANNER ========== -->
 	<header id="utama">
 		<div class="container">
@@ -46,9 +45,29 @@
 		</div>
 	</header>
 	<!-- ========== HERO BANNER ========== -->
-
-
 	
+	
+	
+	<!-- ========== QUOTE ========== -->
+	<section id="quote">
+		<div class="container">
+			<div class="container-header">
+				<i class="bi bi-chat-square-quote"></i>
+			</div>
+			<div class="container-main">
+				<blockquote>
+					Sejarah mengajarkanmu untuk menolak lupa dan merawat ingatan. Sebab bila ingatan tak ada, maka tidak ada perjuangan dan perlawanan. Apatis dan mati surilah kita!
+				</blockquote>
+				<div class="quote-footer">
+					<i class="bi bi-dash"></i> Ruben M. J. Gutteres <i class="bi bi-dash"></i>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- ========== QUOTE ========== -->
+
+
+
 	<!-- ========== MATERI ========== -->
 	<section id="materi">
 		<div class="container">
@@ -59,7 +78,8 @@
 
 				<a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html">
 					<div class="card">
-						<img class="card-img" src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
+						<img class="card-img"
+							src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
 						<div class="card-body">
 							<h4 class="card-title">Proklamasi Kemerdekaan & Pembentukan Pemerintahan Awal</h4>
 							<p class="card-desc">Description</p>
@@ -82,10 +102,11 @@
 						</div>
 					</div>
 				</a>
-					
+
 				<a href="materi/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan-indonesia/index.html">
 					<div class="card">
-						<img class="card-img" src="assets/img/materi-cover/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan.svg">
+						<img class="card-img"
+							src="assets/img/materi-cover/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan.svg">
 						<div class="card-body">
 							<h4 class="card-title">Ancamana Disintegrasi Bangsa pada Masa Awal Kemerdekaan</h4>
 							<p class="card-desc">Description</p>
@@ -98,7 +119,8 @@
 
 				<a href="materi/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal/index.html">
 					<div class="card">
-						<img class="card-img" src="assets/img/materi-cover/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal.svg">
+						<img class="card-img"
+							src="assets/img/materi-cover/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal.svg">
 						<div class="card-body">
 							<h4 class="card-title">Kondisi RI pada Masa Awal Kemerdekaan hingga Masa Demokrasi Liberal</h4>
 							<p class="card-desc">Description</p>
@@ -165,30 +187,30 @@
 		</div>
 	</section>
 	<!-- ========== MATERI ========== -->
-
-
 	
-	<!-- ========== TENTANG ========== -->
-	<section id="tentang">
+	
+	
+	<!-- ========== DEVELOPERS ========== -->
+	<section id="developers">
 		<div class="container">
 			<div class="container-header">
-				<i class="bi bi-chat-right-quote"></i> Tentang
+				<i class="bi bi-people"></i> Developers
 			</div>
 			<div class="container-main">
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea eveniet laboriosam, eaque quos consectetur rerum commodi vel quasi inventore rem dolores maiores at. Optio eligendi excepturi consequuntur odio eaque maiores nulla placeat nihil alias. Rem facere possimus natus cumque sunt itaque, tempore, debitis ex quisquam voluptates incidunt commodi laudantium voluptatum ratione esse architecto officia quo officiis molestiae reprehenderit eum! Accusantium id aperiam ex fuga quae nulla, facere quis nemo autem pariatur! Tempora nulla voluptatum molestias pariatur obcaecati? Totam, eum nobis. Similique autem quos eos, nostrum esse nobis, in accusantium nemo recusandae a hic. Eius soluta, dignissimos dicta consequuntur velit quos.
-				</p>
+
+				<h1>"YNTKTS"</h1>
+
 			</div>
 		</div>
 	</section>
-	<!-- ========== TENTANG ========== -->
+	<!-- ========== DEVELOPERS ========== -->
 
 
-	
+
 	<!-- ========== FOOTER ========== -->
 	<footer>
 		<div class="container">
-			©2021 Power Rangers | Made with <i class="bi bi-heart-fill" style="color: red;"></i> in Bali, Indonesia
+			© 2021 Power Rangers | Made with <i class="bi bi-heart-fill" style="color: red;"></i> in Bali, Indonesia
 		</div>
 	</footer>
 	<!-- ========== FOOTER ========== -->
