add back to top navigation on footer

--- a/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
+++ b/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <nav>
+  <nav id="top">
     <div class="container">
       <ul class="nav-page">
         <li><a href="../../index.html">Sejarahku</a></li>
@@ -220,7 +220,10 @@
   <!-- ========== FOOTER ========== -->
 	<footer>
 		<div class="container">
-			<div class="top">
+      <div class="top">
+        <a href="#top"><i class="bi bi-arrow-up"></i> Back to top </a>
+      </div>
+			<div class="middle">
 				<a href="../../index.html#utama"><i class="bi bi-house"></i> Home</a> •
 				<a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a> •
 				<a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a>
