redesign 'back to top' button

--- a/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
+++ b/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
@@ -30,6 +30,8 @@
     </div>
   </nav>
 
+  
+
   <section>
     <div class="main-title">
       Proklamasi Kemerdekaan dan Pembentukan Pemerintahan Awal
@@ -149,9 +151,9 @@
           <li>
             <dl>
               <dt><i><b>SIDANG PPKI 1 - 18 AGUSTUS 1945</b></i></dt>
-              <dd>- Mengesahkan Undang-Undang Dasar 1945</dd>
-              <dd>- Memilih dan mengangkat Soekarno sebagai Presiden dan Drs. Mohammad Hatta sebagai Wakil Presiden</dd>
-              <dd>- Tugas Presiden sementara dibantu oleh Komite Nasional Indonesia Pusat (sebelum dibentuknya MPR dan DPR)
+              <dd>Mengesahkan Undang-Undang Dasar 1945</dd>
+              <dd>Memilih dan mengangkat Soekarno sebagai Presiden dan Drs. Mohammad Hatta sebagai Wakil Presiden</dd>
+              <dd>Tugas Presiden sementara dibantu oleh Komite Nasional Indonesia Pusat (sebelum dibentuknya MPR dan DPR)
               </dd>
               <br>
             </dl>
@@ -159,19 +161,19 @@
           <li>
             <dl>
               <dt><i><b>SIDANG PPKI II - 19 AGUSTUS 1945</b></i></dt>
-              <dd>- Membentuk 12 Kementerian dan 4 Menteri Negara</dd>
-              <dd>- Membentuk Pemerintahan Daerah. Indonesia dibagi menjadi 8 provinsi yang dipimpin oleh seorang gubernur
+              <dd>Membentuk 12 Kementerian dan 4 Menteri Negara</dd>
+              <dd>Membentuk Pemerintahan Daerah. Indonesia dibagi menjadi 8 provinsi yang dipimpin oleh seorang gubernur
               </dd>
-              <dd>- Pembentukan KNID</dd>
+              <dd>Pembentukan KNID</dd>
               <br>
             </dl>
           </li>
           <li>
             <dl>
               <dt><i><b>SIDANG PPKI III - 22 AGUSTUS 1945</b></i></dt>
-              <dd>- Membentuk Komite Nasional Indonesia</dd>
-              <dd>- Membentuk Partai Nasional Indonesia</dd>
-              <dd>- Membentuk Badan Keamanan Rakyat</dd>
+              <dd>Membentuk Komite Nasional Indonesia</dd>
+              <dd>Membentuk Partai Nasional Indonesia</dd>
+              <dd>Membentuk Badan Keamanan Rakyat</dd>
             </dl>
           </li>
         </ul>
@@ -213,6 +215,12 @@
         </table>
       </div>
     </div>
+
+    <!-- ========== BACK TO TOP ========== -->
+    <div class="to-top">
+      <a href="#top" type="button"><i class="bi bi-arrow-up"></i> Back to top</a>
+    </div>
+    <!-- ========== BACK TO TOP ========== -->
   </section>
 
 
@@ -220,10 +228,7 @@
   <!-- ========== FOOTER ========== -->
 	<footer>
 		<div class="container">
-      <div class="top">
-        <a href="#top"><i class="bi bi-arrow-up"></i> Back to top </a>
-      </div>
-			<div class="middle">
+			<div class="top">
 				<a href="../../index.html#utama"><i class="bi bi-house"></i> Home</a> •
 				<a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a> •
 				<a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a>
