--- a/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
+++ b/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
@@ -16,6 +16,7 @@
 
 <body>
 
+  <!-- ========== NAVBAR ========== -->
   <nav id="top">
     <div class="container">
       <ul class="nav-page">
@@ -29,9 +30,11 @@
       </div>
     </div>
   </nav>
-
+  <!-- ========== NAVBAR ========== -->
   
 
+
+  <!-- ========== EXPLANATION ========== -->
   <section>
     <div class="main-title">
       Proklamasi Kemerdekaan dan Pembentukan Pemerintahan Awal
@@ -221,7 +224,9 @@
       <a href="#top" type="button"><i class="bi bi-arrow-up"></i> Back to top</a>
     </div>
     <!-- ========== BACK TO TOP ========== -->
+    
   </section>
+  <!-- ========== EXPLANATION ========== -->
 
 
 
