Add some changes

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Adi Aryasuta</strong></small>
+							<small>Author <strong>Adi Aryasuta</strong></small>
 						</div>
 					</div>
 				</a>
@@ -100,7 +100,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Iqbal Faturrohim</strong></small>
+							<small>Author <strong>Iqbal Faturrohim</strong></small>
 						</div>
 					</div>
 				</a>
@@ -114,7 +114,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Iqbal Faturrohim</strong></small>
+							<small>Author <strong>Iqbal Faturrohim</strong></small>
 						</div>
 					</div>
 				</a>
@@ -129,7 +129,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Pera Pradnyani</strong></small>
+							<small>Author <strong>Pera Pradnyani</strong></small>
 						</div>
 					</div>
 				</a>
@@ -142,7 +142,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Candra Manika</strong></small>
+							<small>Author <strong>Candra Manika</strong></small>
 						</div>
 					</div>
 				</a>
@@ -155,7 +155,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Sulton Akbar</strong></small>
+							<small>Author <strong>Sulton Akbar</strong></small>
 						</div>
 					</div>
 				</a>
@@ -168,7 +168,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Adi Aryasuta</strong></small>
+							<small>Author <strong>Adi Aryasuta</strong></small>
 						</div>
 					</div>
 				</a>
@@ -181,7 +181,7 @@
 							<p class="card-desc">Description</p>
 						</div>
 						<div class="card-footer">
-							<small>Presented by <strong>Sulton Akbar</strong></small>
+							<small>Author <strong>Sulton Akbar</strong></small>
 						</div>
 					</div>
 				</a>
