Fix navbar and some changes

--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
 <body>
 
 	<!-- ========== NAVBAR ========== -->
-	<nav>
-		<div class="nav-brand">
-			<a href="#utama">SEJARAHKU</a>
-		</div>
-		<ul class="nav-items">
-			<li><a href="#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
-			<li><a href="#developers"><i class="bi bi-people"></i> Developers</a></li>
-		</ul>
-		<div class="nav-end">
-			<a href="https://github.com/adiiaryasutaa/sejarahku"><i class="bi bi-github"></i></a>
-		</div>
-	</nav>
+	<div class="navbar">
+    <nav>
+      <div class="container">
+        <div class="navbar-brand">
+          <a href="../../index.html">SEJARAHKU</a>
+        </div>
+        <ul class="navbar-items">
+          <li><a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
+          <li><a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a></li>
+        </ul>
+        <div class="navbar-end">
+          <a href="https://github.com/adiiaryasutaa/sejarahku"><i class="bi bi-github"></i></a>
+        </div>
+      </div>
+    </nav>
+  </div>
 	<!-- ========== NAVBAR ========== -->
 
 
@@ -300,7 +304,7 @@
 	<!-- ========== FOOTER ========== -->
 	<footer>
 		<div class="container">
-			<div class="top">
+			<div class="navigations">
 				<a href="#utama"><i class="bi bi-house"></i> Home</a> •
 				<a href="#materi"><i class="bi bi-journal-text"></i> Materi</a> •
 				<a href="#developers"><i class="bi bi-people"></i> Developers</a>
