--- a/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
+++ b/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
@@ -23,11 +23,11 @@
     <nav>
       <div class="container">
         <div class="navbar-brand">
-          <a href="#utama">SEJARAHKU</a>
+          <a href="../../index.html">SEJARAHKU</a>
         </div>
         <ul class="navbar-items">
-          <li><a href="#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
-          <li><a href="#developers"><i class="bi bi-people"></i> Developers</a></li>
+          <li><a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
+          <li><a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a></li>
         </ul>
         <div class="navbar-end">
           <a href="https://github.com/adiiaryasutaa/sejarahku"><i class="bi bi-github"></i></a>
